--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "webpack-dev-server --open",
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register test/*.js"
+    "test": "./node_modules/.bin/mocha --require babel-core/register test/*.js"
   },
   "repository": {
     "type": "git",
