--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/XavierEr/ReactTest#readme",
   "dependencies": {
+    "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "fetch": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
