--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "start": "node server.js",
+    "build": "./node_modules/.bin/webpack --config webpack.config.js",
     "test": "./node_modules/.bin/mocha --require babel-core/register test/*.js"
   },
   "repository": {
@@ -18,9 +19,8 @@
   },
   "homepage": "https://github.com/XavierEr/ReactTest#readme",
   "dependencies": {
-    "css-loader": "^0.28.11",
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "fetch": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
@@ -30,11 +30,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.0.6",
     "mocha": "^5.0.4",
     "sinon": "^4.4.6",
+    "style-loader": "^0.20.3",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
